# main.go
@@ -3,21 +3,33 @@ package main
 import (
 	"github.com/gin-gonic/gin"
 	_ "github.com/happyphper/gin-swagger-demo/docs" // docs is generated by Swag CLI, you have to import it.
+	"github.com/happyphper/gin-swagger-demo/handlers"
 )
 
 var swagHandler gin.HandlerFunc
 
 // @title API Demo
 // @version 1.0
-// @description This is a sample server Petstore server.
+// @description Test swagger api docs
 
-// @host petstore.swagger.io
-// @BasePath /v2
+// @host 127.0.0.1:8080
+// @BasePath /api
 func main() {
 	r := gin.New()
 
 	if swagHandler != nil {
 		r.GET("/swagger/*any", swagHandler)
+	}
+
+	apiR := r.Group("/api")
+	{
+		apiR.POST("login", handlers.Login)
+		apiR.POST("register", handlers.Register)
+		apiR.GET("todos", handlers.TodoIndex)
+		apiR.GET("todos/:id", handlers.TodoShow)
+		apiR.POST("todos", handlers.TodoStore)
+		apiR.PUT("todos/:id", handlers.TodoUpdate)
+		apiR.DELETE("todos/:id", handlers.TodoDestroy)
 	}
 
 	_ = r.Run("127.0.0.1:8080")
